re PR c++/47068 ([C++0x] internal compiler error on decltype(~ expression))

PR c++/47068
	* semantics.c (finish_id_expression): Don't note non-names
	as being used in the class.

From-SVN: r168309